syntax = "proto3";

package user;

service UserService {
  rpc ShowStatus (ShowStatusDto) returns (ShowStatusResult) {}
}

message ShowStatusDto {
  int32 userUuid = 1;
}

message ShowStatusResult {
  int32 status = 1;
}